# audio

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: action.yml  compile.yml  slack.yml
chazonance/: .gitignore  audio.cc  configure.ac  constants.hh  fft.cc  fft.hh  wav.cc
etc/: build_type.cmake  cflags.cmake  tests.cmake
internetStatistics/: Makefile.in  config.h  configure  configure.ac
internetStatistics/autom4te.cache/: output.2  traces.1
internetStatistics/src/: .gitignore  Makefile  client  client.cc  eventloop.cc  server  server.cc
internetStatistics/src/examples/: client.cpp  server.cpp
internetStatistics/src/util/: Makefile.am  eventloop.cc
internetStatistics/src/util/.deps/: file_descriptor.Po  timer.Po
src/: README.md
src/audio/: CMakeLists.txt  alsa_devices.cc  alsa_devices.hh  audio.cc  audio_buffer.hh  audio_receiver.cc  audio_receiver_test.cc  audio_sender_test.cc  audio_task.cc  audio_task.hh  encoder_task.cc  encoder_task.hh  network.hh  opus.cc  opus.hh  stagecast-client.cc  tester.cc  timestamp.hh
src/audio-nmap/: Makefile.am  audio.hh  chazonance.cc  constants.hh  helpers.hh  parse.cc  wav.hh
src/control/: CMakeLists.txt  control_messages.hh  controller.cc  controller.hh
src/crypto/: CMakeLists.txt  ae.hh  base64.cc  base64.hh  byteorder.h  crypto.cc  crypto.hh  crypto_test.cc  decrypt.cc  encrypt.cc  ocb.cc  tester.cc
src/dbus/: audio_device_claim.cc
src/frontend/: CMakeLists.txt  audio-server.cc  client-control.cc  cue-parser.cc  dummy_server.cc  example-http-server.cc  example-video-server.cc  example-ws-server.cc  filmout.cc  make-key.cc  media-download.cc  relay.cc  server-control.cc  stagecast-client-embedded.cc  stagecast-client.cc  stagecast-hdmi-client.cc  stagecast-server.cc  stagecast-video-client.cc  stagecast-video-server.cc  stats_printer.cc  stats_printer.hh  tester.cc  unit_test.cc  video-server-control.cc  webcam-demo-ws.cc  webcam-demo.cc  ws-audio-server.cc  ws-camera-server.cc  ws-control-server.cc  ws-switcher-server.cc  ws-video-server.cc
src/http/: CMakeLists.txt  http_reader.hh  http_structures.hh  http_writer.cc  http_writer.hh  secure_socket.cc  secure_socket.hh  ws_frame.cc  ws_frame.hh  ws_server.cc  ws_server.hh
src/internetStatistics/: Makefile  Makefile.am  README.md  config.status
src/internetStatistics/autom4te.cache/: output.0  requests  traces.0  traces.2
src/internetStatistics/src/: Makefile.am  Makefile.in
src/internetStatistics/src/util/: Makefile  Makefile.in  README.md  eventloop.hh  ring_buffer.cc  socket.cc  socket.hh
src/internetStatistics/src/util/.deps/: address.Po  eventloop.Po  ring_buffer.Po  socket.Po
src/network/: CMakeLists.txt  connection.cc  connection.hh  formats.cc  formats.hh  keys.cc  keys.hh  multiserver.cc  multiserver.hh  network_sender.cc  network_sender.hh  receiver.cc  receiver.hh  sender.cc  sender.hh
src/playback/: CMakeLists.txt  clock.cc  clock.hh  cursor.cc  cursor.hh  decoder_process.cc  decoder_process.hh  endpoints.cc  endpoints.hh  multiserver.cc  multiserver.hh  networkclient.cc  networkclient.hh  wavwriter.cc  wavwriter.hh  webmwriter.cc  webmwriter.hh
src/server/: CMakeLists.txt  audioboard.cc  audioboard.hh  client.cc  client.hh  keys.cc  keys.hh  multiserver.cc  multiserver.hh  server_control.cc  set.hh
src/stats/: CMakeLists.txt  Makefile.am  client.cc  process_results.py  receiver.cc  sender.cc  server.cc
src/tests/: CMakeLists.txt  websocket-loop.cc
src/util/: Makefile.am  address.cc  address.hh  alsa_devices.cc  alsa_devices.hh  audio_device_claim.cc  audio_device_claim.hh  byteorder.h  device_claim_util.cc  device_claim_util.hh  eventloop.cc  eventloop.hh  ewma.hh  exception.hh  fatal_assert.h  jitter.hh  mmap.cc  mmap.hh  ocb.cc  opus.cc  opus.hh  opus_float_encode.cpp  parser.hh  ring_buffer.cc  ring_buffer.hh  simple_string_span.hh  socket.cc  socket.hh  spans.hh  stackbuffer.hh  timer.cc  timer.hh  typed_ring_buffer.hh
src/video/: 2d.hh  CMakeLists.txt  av_check.cc  av_check.hh  camera.cc  camera.hh  compositor.cc  compositor.hh  crop.hh  h264_decoder.cc  h264_decoder.hh  h264_encoder.cc  h264_encoder.hh  jpeg.cc  jpeg.hh  mp4writer.cc  mp4writer.hh  raster.cc  raster.hh  scale.cc  scale.hh  video_control.cc  video_source.cc  video_source.hh  videoclient.cc  videoclient.hh  videofile.hh  videomkvwriter.cc  videomkvwriter.hh  videoserver.cc  videoserver.hh  vsclient.cc  vsclient.hh  yuv4mpeg.cc  yuv4mpeg.hh
src/web/: Player.html  Player.js  camera.html  camera.js  camera2.html  camera2.js  control.html  control.js  preview.html  preview.js  program.html  program.js  webcam.html  webcam.js
